tests/NormalTests/paczka2/big_fuzzy/31150551.err
Error in line 2: S430 A22 52,5
Error in line 4: orO A178 55,6
Error in line 8: orO A172 78,0
Error in line 28: S430 S430 23,1
Error in line 35: S430 A178 67,2
Error in line 38: EXmG0wiNX A178 16,5
Error in line 48: orO A172 77,19
Error in line 29: 3pqoZd S430 45,7
Error in line 53: 3pqoZd A172 85,7
Error in line 40: S430 S430 41,7
Error in line 55: 3pqoZd S430 35,5
Error in line 56: S430 A22 89,6
Error in line 64: 5WBt9j38z A178 58,66
Error in line 47: orO A178 75,9
Error in line 78: 3pqoZd S430 55,7
Error in line 80: 65cQDBAo2 S430 -1,6
Error in line 79: 3pqoZd A22 4,2
Error in line 68: orO A172 236,8
Error in line 91: orO A22 32,3
Error in line 97: 3pqoZd A172 91,07
Error in line 96: 3pqoZd S430 62,4
Error in line 99: 3pqoZd A178 55,4
Error in line 77: 65cQDBAo2 S430 36,7
Error in line 90: S430 A172 26,1
Error in line 110: 3pqoZd S430 76,0
Error in line 114: 3pqoZd A172 27,9
Error in line 129: EXmG0wiNX A178 14,3
Error in line 128: 3pqoZd A22 18,9
Error in line 151: EXmG0wiNX A172 5,1
Error in line 160: S430 S430 16,4
Error in line 150: 3pqoZd A178 62,5
Error in line 164: S430 A178 20,3
Error in line 167: S430 A172 91,0
Error in line 168: S430 A22 73,5
Error in line 174: 3pqoZd S430 94,9
Error in line 177: S430 A172 83,4
Error in line 156: 5WBt9j38z A172 62,3
Error in line 183: EXmG0wiNX A172 64,5
Error in line 179: S430 A22 65,2
Error in line 175: 65cQDBAo2 A22 169,3
Error in line 194: 3pqoZd A178 |6,4
Error in line 202: 3pqoZd S430 05,5
Error in line 203: S430 A22 75,7
Error in line 214: S430 A172 -4,6
Error in line 217: EXmG0wiNX A178 69,78
Error in line 228: orO A172 94,2
Error in line 210: S430 A172 85,5
Error in line 233: S430 A178 66,8
Error in line 219: EXmG0wiNX A178 108,2
Error in line 235: EXmG0wiNX A172 43,6
Error in line 243: 5WBt9j38z S430 46,2
Error in line 238: EXmG0wiNX A178 17,5
Error in line 246: 65cQDBAo2 A22 31,40
Error in line 247: orO A178 -1,8
Error in line 230: orO A178 7,7
